sidebar pop up and resizing

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -21,6 +21,9 @@
     "chrome_style": true
   },
   "permissions": [
-    "activeTab"
-  ]
+    "activeTab",
+    "storage"
+  ],
+
+  "web_accessible_resources": ["sidebar/sidebar.js"]
 }
