--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.5.0",
+    "jquery": "^3.4.1",
     "vue": "^2.6.11",
     "vuex": "^3.0.1",
     "vuex-webextensions": "^1.3.0",
