--- a/src/manifest.json
+++ b/src/manifest.json
@@ -16,14 +16,24 @@
       "background.js"
     ]
   },
+  "content_scripts": [{
+    "matches": ["<all_urls>"],
+    "js": ["highlighter/background/errorManager.js",
+      "highlighter/background/highlight.js",
+      "highlighter/background/loadHighlights.js",
+      "highlighter/background/storageManager.js"
+    ],
+    "all_frames": true
+  }],
   "options_ui": {
     "page": "options/options.html",
     "chrome_style": true
   },
   "permissions": [
     "activeTab",
-    "storage"
-  ],
-
-  "web_accessible_resources": ["sidebar/sidebar.js", "popup/popup.html"]
+    "unlimitedStorage",
+    "contextMenus",
+    "storage",
+    "<all_urls>"
+  ]
 }
