--- a/package.json
+++ b/package.json
@@ -27,10 +27,14 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/vue-fontawesome": "^0.1.9",
     "axios": "^0.19.0",
+    "vue-quill-editor": "^3.0.6",
+    "highlight.js": "^9.18.1",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.5.0",
     "jquery": "^3.4.1",
+    "quill-plugin-image-upload": "0.0.6",
     "vue": "^2.6.11",
+    "vue-dompurify-html": "^2.1.1",
     "vuex": "^3.0.1",
     "vuex-webextensions": "^1.3.0",
     "webextension-polyfill": "^0.3.1"
