--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "vue": "^2.6.11",
     "vue-dompurify-html": "^2.1.1",
     "vue-quill-editor": "^3.0.6",
+    "vue-scrollto": "^2.17.1",
     "vuex": "^3.0.1",
     "vuex-webextensions": "^1.3.0",
     "webextension-polyfill": "^0.3.1"
