--- a/.babelrc
+++ b/.babelrc
@@ -6,9 +6,10 @@
     ["@babel/preset-env", {
       "useBuiltIns": "usage",
       "corejs": 3,
+      "modules": false,
       "targets": {
         // https://jamie.build/last-2-versions
-        "browsers": ["> 0.25%", "not ie 11", "not op_mini all"]
+        "browsers": ["last 2 Chrome versions, last 2 firefox versions"]
       }
     }]
   ]
