--- a/src/manifest.json
+++ b/src/manifest.json
@@ -18,13 +18,11 @@
   },
   "content_scripts": [{
     "matches": ["<all_urls>"],
-    "js": ["highlighter/background/errorManager.js",
+    "js": [
       "highlighter/background/highlighter.js",
-      "highlighter/background/loadHighlights.js",
-      "highlighter/background/storageManager.js",
       "utils/sidebarContentScript.js"
     ],
-    "css": ["contentStyles.css", "cardEditor/cardEditor.css"],
+    "css": ["contentStyles.css"],
     "all_frames": true
   }],
   "options_ui": {
