--- a/src/manifest.json
+++ b/src/manifest.json
@@ -19,7 +19,7 @@
   "content_scripts": [{
     "matches": ["<all_urls>"],
     "js": [
-      "highlighter/background/highlighter.js",
+      "highlighter/highlighter.js",
       "utils/sidebarContentScript.js"
     ],
     "css": ["contentStyles.css"],
