--- a/src/manifest.json
+++ b/src/manifest.json
@@ -17,7 +17,8 @@
     ]
   },
   "content_scripts": [{
-    "matches": ["<all_urls>"],
+    "matches": ["http://*/*", "https://*/*"],
+    "exclude_globs": ["*ipfc.tech*"],
     "js": [
       "highlighter/highlighter.js",
       "utils/sidebarContentScript.js"
