--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "quill-plugin-image-upload": "0.0.6",
     "vue": "^2.6.11",
     "vue-dompurify-html": "^2.1.1",
+    "vue-js-toggle-button": "^1.3.3",
     "vue-quill-editor": "^3.0.6",
     "vue-scrollto": "^2.17.1",
     "vuex": "^3.0.1",
