--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ipfc-extension",
-  "version": "1.0.55",
+  "version": "1.0.56",
   "description": "Quickly make flashcards and highlights from websites and sync them to multiplatform flashcard apps for review",
   "author": "Jacob Cohen-Rosenthal <xiaokourou@gmail.com>",
   "license": "MIT",
@@ -33,6 +33,7 @@
     "jquery": "^3.4.1",
     "quill-plugin-image-upload": "0.0.6",
     "vue": "^2.6.11",
+    "vue-custom-scrollbar": "^1.2.0",
     "vue-dompurify-html": "^2.1.1",
     "vue-js-toggle-button": "^1.3.3",
     "vue-quill-editor": "^3.0.6",
