--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     }
   },
   "dependencies": {
+    "@babel/compat-data": "^7.10.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/vue-fontawesome": "^0.1.9",
